--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@lunos/client",
-   "version": "1.1.0",
+   "version": "1.2.0",
    "description": "Official TypeScript client library for Lunos AI API - A comprehensive AI proxy service supporting chat completions, image generation, audio synthesis, embeddings, and more.",
    "main": "./dist/index.js",
    "module": "./dist/index.mjs",
@@ -20,7 +20,7 @@
    "homepage": "https://lunos.tech/docs",
    "repository": {
       "type": "git",
-      "url": "https://github.com/lunos-tech/client-js"
+      "url": "git+https://github.com/lunos-tech/client-js.git"
    },
    "scripts": {
       "build": "tsup",
