--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
    "author": "superXdev",
    "license": "MIT",
    "devDependencies": {
-      "@types/node": "^24.0.13",
-      "tsup": "^8.5.0",
-      "typescript": "^5.8.3",
       "@types/jest": "^29.5.0",
+      "@types/node": "^24.0.13",
+      "@typescript-eslint/eslint-plugin": "^6.0.0",
+      "@typescript-eslint/parser": "^6.0.0",
+      "eslint": "^8.0.0",
       "jest": "^29.5.0",
       "ts-jest": "^29.1.0",
-      "eslint": "^8.0.0",
-      "@typescript-eslint/eslint-plugin": "^6.0.0",
-      "@typescript-eslint/parser": "^6.0.0"
+      "tsup": "^8.5.0",
+      "typescript": "^5.8.3"
    },
    "peerDependencies": {
       "typescript": ">=4.9.0"
@@ -74,5 +74,8 @@
    },
    "publishConfig": {
       "access": "public"
+   },
+   "dependencies": {
+      "wav-encoder": "^1.3.0"
    }
 }
